# NexMotion_API

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  UserManual.html  _nex_motion_8h.html  _nex_motion_8h.js  _nex_motion_8h__incl.map  _nex_motion_8h__incl.md5  _nex_motion_8h_source.html  _nex_motion_def_8h.html  _nex_motion_def_8h.js  _nex_motion_def_8h__dep__incl.map  _nex_motion_def_8h__dep__incl.md5  _nex_motion_def_8h__incl.map  _nex_motion_def_8h__incl.md5  _nex_motion_def_8h_source.html  _nex_motion_error_8h.html  _nex_motion_error_8h.js  _nex_motion_error_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files.js  formula.repository  functions.html  functions_vars.html  globals.html  globals_b.html  globals_defs.html  globals_dup.js  globals_e.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_m.html  globals_n.html  (+236 more)
docs/: Doxyfile  UserManual.md  mainpage.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  (+20 more)
src/: NexMotion.h  NexMotionDef.h  NexMotionError.h  nex_type.h
